--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
   <div class="col-9">
     <div class="container">
       <% if @category.present? %>
-        <%= link_to "トップ", "#", category: @major_category_name %> > <%= @category.name %>
+        <%= link_to "トップ", root_path, category: @major_category_name %> > <%= @category.name %>
         <h1><%= @category.name %>の商品一覧<%= @products.count %>件</h1>
       <% end %>
       <%= form_with url: products_path, method: :get, local: true, class: "form-inline" do |f| %>
